classDiagram
    class User {
        +UUID id
        +String username
        +String email
        +Boolean active
        +validateEmail()
    }

    class Product {
        +UUID id
        +String name
        +Float price
        +Integer stock
        +calculateDiscount()
    }

    class Order {
        +UUID id
        +UUID userId
        +Float totalAmount
        +String status
        +processOrder()
    }

    User "1" --> "*" Order
    Order "*" --> "*" Product
